tests: fix sticky hover class on mobile

--- a/public/assets/css/tests.css
+++ b/public/assets/css/tests.css
@@ -24,10 +24,6 @@ label.new-test-afsc {
     cursor: pointer;
 }
 
-.answer:hover {
-    background-color: #faffa3;
-}
-
 .answer.selected {
     background-color: #7cd6f7;
 }
